# Sistemi_Embedded_di_rete

Arduino/ESERCITAZIONE/buzzer/: buzzer.ino
Arduino/ESERCITAZIONE/led_button/: led_button.ino
Arduino/ESERCITAZIONE/sensoreTemp/: sensoreTemp.ino
Arduino/ESERCITAZIONE/source/scenario_1/Master/: Master.ino
Arduino/ESERCITAZIONE/source/scenario_2/TemperatureSensor/: TemperatureSensor.ino
Arduino/ESERCITAZIONE/source/scenario_3/TemperatureSensor/: TemperatureSensor.ino
Arduino/ESERCITAZIONE/source_old/scenario_1/Slave/: Slave.ino
Arduino/ESERCITAZIONE/source_old/scenario_2/TempSensor/: TempSensor.ino
Arduino/ESERCITAZIONE/source_old/scenario_3/CurrSensor/: CurrSensor.ino
Arduino/ESERCITAZIONE/source_update/scenario_1/Slave/: Slave.ino
Arduino/ESERCITAZIONE/source_update/scenario_2/Sniffer/: Sniffer.ino
Arduino/ESERCITAZIONE/source_update/scenario_2/TempSensor/: TempSensor.ino
Arduino/ESERCITAZIONE/source_update/scenario_3/TempSensor/: TempSensor.ino
Sintesi/source/: .gitignore  NetworkChecker.py  NetworkComponent.py  Synthesizer.py  clean.sh
Sintesi/source/case_study_1/: channels  input
Sintesi/source/case_study_2/: input  nodes
Sintesi/source/networklib/: Channel.py  Contiguity.py  DataFlow.py  NetworkChecker.py  NetworkInstance.py  Node.py  ScnslGenerator.py  Task.py  TechLibPrinter.py  UmlForScilabPrinter.py  UmlGenerator.py  Zone.py
source/: CMakeLists.deps.txt  CMakeLists.txt  calculatePLR.sh
source/1.Two_Nodes/inc/: MyTaskCollector.hh  MyTaskSensor.hh
source/1.Two_Nodes/src/: MyTaskCollector.cc  MyTaskSensor.cc  main.cc
source/2.Three_Nodes_with_Router/inc/: MyTaskCollector.hh
source/2.Three_Nodes_with_Router/src/: MyTaskCollector.cc  MyTaskSensor.cc  main.cc
source/3.Temperature_Monitoring/inc/: MyTaskController.hh
source/3.Temperature_Monitoring/src/: MyTaskController.cc  MyTaskSensor.cc  main.cc
source/scripts/: CMakeLists.defs.txt  CMakeLists.doxy.cmake  CMakeLists.gcc.cmake  CMakeLists.install.cmake  CMakeLists.latex.cmake  CMakeLists.reg.txt  CMakeLists.support.txt  CMakeLists.vc.cmake  FindBazaar.cmake  FindEdalabBase.cmake  FindEdalabCompiler.cmake  FindEdalabDoxygen.cmake  FindEdalabGcc.cmake  FindEdalabLatex.cmake  FindEdalabSystemC.cmake  FindEdalabTargets.cmake  FindEdalabVc.cmake  FindRevision.cmake  FindScnsl.cmake  FindSystemC.cmake  env-setup.sh
